--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,7 @@
 nixPkgs = ["nodejs", "python3"]
 
 [phases.install]
-cmds = ["npm install"]
-
-[phases.build]
-cmds = ["npm run build"]
+cmds = ["npm run railway:build"]
 
 [start]
-cmd = "npm start"
+cmd = "npm run railway:start"
