--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,10 @@
 nixPkgs = ["nodejs", "python3"]
 
 [phases.install]
-cmds = ["npm run railway:build"]
+cmds = ["npm install"]
+
+[phases.build]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npm run railway:start"
+cmd = "npm start"
