הוספת כל הקבצים החיוניים: package.json, package-lock.json, tsconfig.json, nixpacks.toml + עדכון תצורת Railway

--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,17 @@ env/
 *.sqlite3
 
 # Large data files
-*.json
 *.txt
 *.log
+
+# JSON files (but keep package.json)
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!next.config.js
+!tailwind.config.js
+!postcss.config.js
 
 # IDE
 .vscode/
