--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -55,6 +54,9 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# Keep src/lib (TypeScript library files)
+!src/lib/
 
 # Virtual Environment
 .venv/
