--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,24 +2,14 @@
 nixPkgs = ["nodejs", "python3"]
 
 [phases.install]
-cmds = [
-  "echo '=== INSTALL PHASE START ==='",
-  "echo 'Current directory:' && pwd",
-  "echo 'Files in directory:' && ls -la",
-  "echo 'Installing npm packages...'",
-  "npm install --verbose",
-  "echo '=== INSTALL PHASE COMPLETE ==='"
-]
+cmds = ["npm install"]
 
 [phases.build]
-cmds = [
-  "echo '=== BUILD PHASE START ==='",
-  "echo 'Generating Prisma client...'",
-  "npx prisma generate",
-  "echo 'Building Next.js app...'",
-  "npm run build",
-  "echo '=== BUILD PHASE COMPLETE ==='"
-]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm start"
+
+[variables]
+HOSTNAME = "0.0.0.0"
+PORT = "8080"
