--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,10 +5,10 @@ nixPkgs = ["nodejs", "python3"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["npx prisma generate"]
 
 [start]
-cmd = "npm start"
+cmd = "python backend_runner.py"
 
 [variables]
 HOSTNAME = "0.0.0.0"
