--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
-[phases.setup]
-nixPkgs = ["nodejs", "python3"]
-
 [phases.install]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npx prisma generate"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm start"
