Fix Railway deployment to run Next.js frontend instead of Python backend

--- a/railway.toml
+++ b/railway.toml
@@ -3,8 +3,8 @@ builder = "NIXPACKS"
 watchPatterns = ["**/*"]
 
 [deploy]
-startCommand = "python backend_runner.py"
-healthcheckPath = "/health"
+startCommand = "npm run start:all"
+healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 port = 8080
